--- a/Alicargo/Views/AirWaybill/Edit.cshtml
+++ b/Alicargo/Views/AirWaybill/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@using Alicargo.MvcHelpers
+﻿@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model Alicargo.ViewModels.AirWaybill.AwbAdminModel
 
