--- a/Alicargo/Views/Application/DisplayTemplates/ApplicationDetailsModel.cshtml
+++ b/Alicargo/Views/Application/DisplayTemplates/ApplicationDetailsModel.cshtml
@@ -1,4 +1,4 @@
-﻿@using Alicargo.MvcHelpers
+﻿@using Alicargo.MvcHelpers.Extensions
 @using Microsoft.Ajax.Utilities
 @using Resources
 @model ApplicationDetailsModel
