--- a/Alicargo/Views/ApplicationList/DetailsTemplate.cshtml
+++ b/Alicargo/Views/ApplicationList/DetailsTemplate.cshtml
@@ -1,6 +1,7 @@
 ﻿@using System.Globalization
 @using Alicargo.Contracts.Enums
 @using Alicargo.MvcHelpers
+@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @inherits BaseWebViewPage<ApplicationIndexModel>
 
