--- a/Alicargo/Views/Client/Edit.cshtml
+++ b/Alicargo/Views/Client/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Alicargo.MvcHelpers
+@using Alicargo.MvcHelpers.Extensions
 @model ClientModel
 
 @Html.EditPage(Resources.Pages.ClientEdit, Url.Action(MVC.Client.Edit()), Resources.Pages.Save)
