--- a/Alicargo/Views/DynamicScript/Localization.cshtml
+++ b/Alicargo/Views/DynamicScript/Localization.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Reflection
 @using System.Resources
-@using Alicargo.MvcHelpers
+@using Alicargo.MvcHelpers.Extensions
 @using Resources
 
 @helper Generate(string prefix, ResourceManager manager, Type type)
