--- a/Alicargo/Views/SenderAwb/Create.cshtml
+++ b/Alicargo/Views/SenderAwb/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Alicargo.MvcHelpers
+@using Alicargo.MvcHelpers.Extensions
 @model Alicargo.ViewModels.AirWaybill.AwbSenderModel
 
 @Html.EditPage(Resources.Pages.AirWaybillAdd, Url.Action(MVC.SenderAwb.Create()), Resources.Pages.AirWaybillAdd)
