--- a/Alicargo/Views/SenderAwb/EditorTemplates/AwbSenderModel.cshtml
+++ b/Alicargo/Views/SenderAwb/EditorTemplates/AwbSenderModel.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Alicargo.MvcHelpers
+@using Alicargo.MvcHelpers.Extensions
 @using Resources
-@inherits Alicargo.MvcHelpers.BaseWebViewPage<Alicargo.ViewModels.AirWaybill.AwbSenderModel>
+@inherits BaseWebViewPage<Alicargo.ViewModels.AirWaybill.AwbSenderModel>
 
 @helper SelectBroker()
 {
