--- a/Alicargo/Views/Shared/EditorTemplates/TransitEditModel.cshtml
+++ b/Alicargo/Views/Shared/EditorTemplates/TransitEditModel.cshtml
@@ -1,6 +1,7 @@
 ﻿@using System.Web.Mvc.Html
 @using Alicargo.Core.Localization
 @using Alicargo.MvcHelpers
+@using Alicargo.MvcHelpers.Extensions
 @model TransitEditModel
 
 <div class="row">
