--- a/Alicargo/Views/Shared/Error.cshtml
+++ b/Alicargo/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@model Alicargo.MvcHelpers.CustomHandleErrorInfo
+﻿@model Alicargo.MvcHelpers.Filters.CustomHandleErrorInfo
 
 <div>
 	@Model.Exception.Message
