--- a/Alicargo/Views/User/Edit.cshtml
+++ b/Alicargo/Views/User/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Alicargo.MvcHelpers
+@using Alicargo.MvcHelpers.Extensions
 @model Alicargo.ViewModels.User.UserModel
 
 @Html.EditPage(Resources.Pages.Edit, Url.Action(MVC.User.Edit()), Resources.Pages.Edit)
