--- a/Alicargo/Views/AirWaybill/EditorTemplates/AwbAdminModel.cshtml
+++ b/Alicargo/Views/AirWaybill/EditorTemplates/AwbAdminModel.cshtml
@@ -1,4 +1,4 @@
-﻿@using Alicargo.MvcHelpers
+﻿@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @inherits BaseWebViewPage<Alicargo.ViewModels.AirWaybill.AwbAdminModel>
 
