--- a/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
+++ b/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
@@ -1,19 +1,13 @@
 ﻿@using System.Globalization
 @using Alicargo.Core.Localization
-@using Alicargo.MvcHelpers
+@using Alicargo.MvcHelpers.Extensions
 @using Resources
-@inherits Alicargo.MvcHelpers.BaseWebViewPage<ApplicationAdminModel>
+@inherits BaseWebViewPage<ApplicationAdminModel>
 
 @helper SelectCountry()
 {
 	@Html.LabelFor(x => x.CountryId)
-	var countries = (IDictionary<long, string>)ViewBag.Countries;
-	var list = countries.Select(x => new SelectListItem
-	{
-		Text = x.Value,
-		Value = x.Key.ToString(CultureInfo.InvariantCulture)
-	}).ToList();
-	@Html.DropDownListFor(x => x.CountryId, list)
+	@Html.DropDownListFor(x => x.CountryId, (IDictionary<long, string>)ViewBag.Countries)
 }
 @helper TransitEdit()
 {
@@ -23,6 +17,11 @@
 		  : Html.Action(MVC.Transit.EditByClient((long)ViewBag.ClientId)))
 }
 
+@helper SelectSender()
+{
+	@Html.LabelFor(x => x.SenderId)
+	@Html.DropDownListFor(x => x.SenderId, (IDictionary<long, string>)ViewBag.Senders)
+}
 
 <div class="row">
 	<div class="span4">
