--- a/Alicargo/Views/Broker/AWB.cshtml
+++ b/Alicargo/Views/Broker/AWB.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Alicargo.MvcHelpers
+@using Alicargo.MvcHelpers.Extensions
 @model Alicargo.ViewModels.AirWaybill.AwbBrokerModel
 <h3>
 	@Resources.Entities.AWB:
