--- a/Alicargo/Views/Broker/EditorTemplates/AwbBrokerModel.cshtml
+++ b/Alicargo/Views/Broker/EditorTemplates/AwbBrokerModel.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Alicargo.MvcHelpers
+@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model Alicargo.ViewModels.AirWaybill.AwbBrokerModel
 
