--- a/Alicargo/Views/Client/Create.cshtml
+++ b/Alicargo/Views/Client/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@using Alicargo.MvcHelpers
+﻿@using Alicargo.MvcHelpers.Extensions
 @model ClientModel
 
 @Html.EditPage(Resources.Pages.ClientAdd, Url.Action(MVC.Client.Create()), Resources.Pages.Add)
