--- a/Alicargo/Views/Transit/Edit.cshtml
+++ b/Alicargo/Views/Transit/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Alicargo.MvcHelpers
+@using Alicargo.MvcHelpers.Extensions
 @model TransitEditModel
 
 <ul class="nav nav-tabs" id="transit-tabs">
