--- a/Alicargo/Views/User/Create.cshtml
+++ b/Alicargo/Views/User/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Alicargo.MvcHelpers
+@using Alicargo.MvcHelpers.Extensions
 @model Alicargo.ViewModels.User.UserModel
 
 @Html.EditPage(Resources.Pages.Add, Url.Action(MVC.User.Create()), Resources.Pages.Add)
