--- a/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
+++ b/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
@@ -1,27 +1,6 @@
-﻿@using System.Globalization
-@using Alicargo.Core.Localization
-@using Alicargo.MvcHelpers.Extensions
+﻿@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @inherits BaseWebViewPage<ApplicationAdminModel>
-
-@helper SelectCountry()
-{
-	@Html.LabelFor(x => x.CountryId)
-	@Html.DropDownListFor(x => x.CountryId, (IDictionary<long, string>)ViewBag.Countries)
-}
-@helper TransitEdit()
-{
-	var applicationId = (long?)ViewBag.ApplicationId;
-	@(applicationId.HasValue
-		  ? Html.Action(MVC.Transit.EditByApplication(applicationId))
-		  : Html.Action(MVC.Transit.EditByClient((long)ViewBag.ClientId)))
-}
-
-@helper SelectSender()
-{
-	@Html.LabelFor(x => x.SenderId)
-	@Html.DropDownListFor(x => x.SenderId, (IDictionary<long, string>)ViewBag.Senders)
-}
 
 <div class="row">
 	<div class="span4">
@@ -55,7 +34,8 @@
 		@Html.EditorWithLabelFor(model => model.AddressLoad)
 	</div>
 	<div class="span4">
-		@SelectCountry()
+		@Html.LabelFor(x => x.CountryId)
+		@Html.DropDownListFor(x => x.CountryId, (IDictionary<long, string>)ViewBag.Countries)
 	</div>
 </div>
 <div class="row">
@@ -67,13 +47,8 @@
 	</div>
 	<div class="span4">
 		@Html.EditorWithLabelFor(model => model.TermsOfDelivery)
-		@Html.LabelFor(model => model.MethodOfDeliveryId)
-		@Html.DropDownListFor(model => model.MethodOfDeliveryId,
-							  LocalizeEnumExtension.Select((MethodOfDelivery item, string name) => new SelectListItem
-							  {
-								  Text = name,
-								  Value = ((int)item).ToString(CultureInfo.InvariantCulture)
-							  }))
+		@Html.LabelFor(model => model.MethodOfDelivery)
+		@Html.DropDownListForEnum(model => model.MethodOfDelivery)
 		@Html.EditorWithLabelFor(model => model.TransitCost)
 	</div>
 	<div class="span4">
@@ -100,6 +75,12 @@
 	</div>
 	<div class="span2">
 		@Html.EditorWithLabelFor(model => model.WithdrawCostEdited)
+	</div>
+</div>
+<div class="row">
+	<div class="span4">
+		@Html.LabelFor(x => x.SenderId)
+		@Html.DropDownListFor(x => x.SenderId, (IDictionary<long, string>)ViewBag.Senders, "")
 	</div>
 </div>
 <hr />
@@ -151,5 +132,10 @@
 	<h4>
 		@Pages.Transit
 	</h4>
-	@TransitEdit()
+	@{
+		var applicationId = (long?)ViewBag.ApplicationId;
+		@(applicationId.HasValue
+		  ? Html.Action(MVC.Transit.EditByApplication(applicationId))
+		  : Html.Action(MVC.Transit.EditByClient((long)ViewBag.ClientId)))
+	}
 </div>
