--- a/Alicargo/Views/Application/Create.cshtml
+++ b/Alicargo/Views/Application/Create.cshtml
@@ -1,7 +1,6 @@
-﻿@using Alicargo.MvcHelpers
-@using Alicargo.MvcHelpers.Extensions
+﻿@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model ApplicationAdminModel
 
-<h4 style="margin-top: 33px;" class="pull-right">@Entities.Nic: @Html.ViewBag.ClientNic</h4>
+<h4 style="margin-top: 26px;" class="pull-right">@Entities.Nic: @Html.ViewBag.ClientNic</h4>
 @Html.EditPage(Pages.ApplicationAdd, Url.Action(MVC.Application.Create()), Pages.ApplicationAdd)
