--- a/Alicargo/Views/Sender/EditorTemplates/ApplicationSenderModel.cshtml
+++ b/Alicargo/Views/Sender/EditorTemplates/ApplicationSenderModel.cshtml
@@ -1,5 +1,4 @@
-﻿@using Alicargo.MvcHelpers
-@using Alicargo.MvcHelpers.Extensions
+﻿@using Alicargo.MvcHelpers.Extensions
 @model ApplicationSenderModel
 
 <div class="row">
@@ -13,6 +12,8 @@
 		@Html.EditorWithLabelFor(model => model.Weigth)
 		@Html.EditorWithLabelFor(model => model.Count)
 		@Html.EditorWithLabelFor(model => model.ScotchCost)
+		@Html.LabelFor(x => x.CountryId)
+		@Html.DropDownListFor(x => x.CountryId, (IDictionary<long, string>)ViewBag.Countries)
 	</div>
 	<div class="span4">
 		@Html.EditorWithLabelFor(model => model.Currency)
