--- a/Alicargo/Views/ApplicationList/Tools.cshtml
+++ b/Alicargo/Views/ApplicationList/Tools.cshtml
@@ -32,5 +32,6 @@ else if (IdentityService.IsInRole(RoleType.Client))
 {
 	<p>
 		@Html.ActionLink(Pages.ApplicationAdd, MVC.Application.Create(), new { @class = "btn btn-primary" })
+		@Html.ActionLink(Pages.Excel, MVC.Excel.Applications(), new { @class = "btn btn-info" })
 	</p>
 }
