--- a/Alicargo/Views/ApplicationList/DetailsTemplate.cshtml
+++ b/Alicargo/Views/ApplicationList/DetailsTemplate.cshtml
@@ -7,22 +7,22 @@
 {
 	if (IdentityService.IsInRole(RoleType.Client))
 	{
-	@:# if(StateId != @StateConfig.CargoReceivedStateId){ #
-	<a href="@Url.Action(MVC.Transit.Edit())/#= TransitId #" class="btn btn-primary">@Pages.Edit.EncodeForKendo()</a>
-	@:# } #
+		@:# if(StateId != @StateConfig.CargoReceivedStateId){ #
+		<a href="@Url.Action(MVC.Transit.Edit())/#= TransitId #" class="btn btn-primary">@Pages.Edit.EncodeForKendo()</a>
+		@:# } #
 		return;
 	}
 
 	if (IdentityService.IsInRole(RoleType.Admin))
 	{
-	<a href="@Url.Action(MVC.Application.Edit())/#= Id #" class="btn btn-primary">@Pages.Edit</a>
-	<button type="button" class="btn btn-danger delete-application">@Pages.Delete</button>
+		<a href="@Url.Action(MVC.Application.Edit())/#= Id #" class="btn btn-primary">@Pages.Edit</a>
+		<button type="button" class="btn btn-danger delete-application">@Pages.Delete</button>
 	}
 
 	if (IdentityService.IsInRole(RoleType.Sender))
 	{
-	<a href="@Url.Action(MVC.Sender.ApplicationEdit())/#= Id #" class="btn btn-primary">@Pages.Edit</a>
-	<button type="button" class="btn btn-danger delete-application">@Pages.Delete</button>
+		<a href="@Url.Action(MVC.Sender.ApplicationEdit())/#= Id #" class="btn btn-primary">@Pages.Edit</a>
+		<button type="button" class="btn btn-danger delete-application">@Pages.Delete</button>
 	}
 }
 
@@ -42,30 +42,38 @@
 	@:&nbsp;
 	@Html.LabelFor(x => x.AirWaybills)
 	@:&nbsp;
-	@Html.DropDownListFor(x => x.AirWaybills, Model.AirWaybills, "", new { @class = "AirWaybill-select" })
+	@Html.DropDownListFor(x => x.AirWaybills, Model.AirWaybills, "", new {@class = "AirWaybill-select"})
 }
 
 @helper AirWaybillButton()
 {
 	if (IdentityService.IsInRole(RoleType.Sender))
 	{
-	<a class="btn btn-inverse" href="@Url.Action(MVC.SenderAwb.Create())/#= Id #">@Pages.AirWaybillAdd</a>
+		<a class="btn btn-inverse" href="@Url.Action(MVC.SenderAwb.Create())/#= Id #">@Pages.AirWaybillAdd</a>
 	}
 	else if (IdentityService.IsInRole(RoleType.Admin))
 	{
-	<a class="btn btn-inverse" href="@Url.Action(MVC.AirWaybill.Create())/#= Id #">@Pages.AirWaybillAdd</a>
+		<a class="btn btn-inverse" href="@Url.Action(MVC.AirWaybill.Create())/#= Id #">@Pages.AirWaybillAdd</a>
 	}
 }
 
 <div class='grid-details'>
-	<div class="properties">
-		@(IdentityService.IsInRole(RoleType.Sender)
-			  ? Html.Partial("SenderDetails")
-			  : Html.Partial("AdminDetails"))
-	</div>
-	@if (!IdentityService.IsInRole(RoleType.Forwarder))
- {
+	@if (IdentityService.IsInRole(RoleType.Sender) || IdentityService.IsInRole(RoleType.Admin))
+	{
+		<div class="properties">
+			@if (IdentityService.IsInRole(RoleType.Sender))
+			{
+				@Html.Partial("SenderDetails")
+			}
+			else if (IdentityService.IsInRole(RoleType.Admin))
+			{
+				@Html.Partial("AdminDetails")
+			}
+		</div>
 		<hr />
+	}
+	@if (!IdentityService.IsInRole(RoleType.Forwarder))
+	{		
 		<div class="grid-details-toolbar">
 			<div>
 				@CloseButton()
@@ -76,5 +84,5 @@
 				</span>
 			</div>
 		</div>
- }
+	}
 </div>
