fixed calculation of senders data

--- a/Alicargo/Views/Calculation/Details.cshtml
+++ b/Alicargo/Views/Calculation/Details.cshtml
@@ -47,7 +47,7 @@
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
 	<td colspan="18"><b>forwarder</b></td>
-	<td class="total" title="@Entities.TotalForwarderCost">#= kendo.toString(TotalForwarderCost, 'n2') #</td>
+	<td class="total" title="@Entities.TotalForwarderCost">#= kendo.toString(TotalTransitCost, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
