--- a/Alicargo/Content/app/entity.css
+++ b/Alicargo/Content/app/entity.css
@@ -73,6 +73,33 @@
 		line-height: 1.4em;
 	}
 
+
+	.grid .k-button-icontext {
+		height: 16px;
+		min-width: 0 !important;
+		width: 16px;
+		padding: 0;		
+		margin: 0;
+	}
+
+	.grid .k-button-icontext:hover {
+		text-decoration: none;
+	}
+
+		.grid .k-button-icontext span {
+			background-image: url('../kendo/2013.2.716/Default/sprite.png');
+			background-repeat: no-repeat;
+			border-color: transparent;
+			display: inline-block;
+			font-size: 0;
+			height: 16px;
+			line-height: 0;
+			overflow: hidden;
+			padding: 0;
+			margin: 0;
+			width: 16px;
+		}
+
 .grid-details {
 	background-color: rgb(248, 252, 248);
 	padding: 10px;
@@ -122,8 +149,11 @@
 	background-color: #ffff00;
 }
 
+#calculation-grid tr.k-group-sub-footer:hover {
+	background-color: #f5f5f5;
+}
+
 #calculation-grid .k-group-sub-footer td {
-	background-color: #ebebeb;
 	border: none;
 }
 
