--- a/Alicargo/Views/SenderAwb/Create.cshtml
+++ b/Alicargo/Views/SenderAwb/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@using Alicargo.MvcHelpers
-@using Alicargo.MvcHelpers.Extensions
+﻿@using Alicargo.MvcHelpers.Extensions
 @model Alicargo.ViewModels.AirWaybill.AwbSenderModel
 
-@Html.EditPage(Resources.Pages.AirWaybillAdd, Url.Action(MVC.SenderAwb.Create()), Resources.Pages.AirWaybillAdd)
+<h1>@Resources.Pages.AirWaybillAdd</h1>
+@Html.EditPage(Url.Action(MVC.SenderAwb.Create()), Resources.Pages.AirWaybillAdd)
