--- a/Alicargo/Views/SenderAwb/Edit.cshtml
+++ b/Alicargo/Views/SenderAwb/Edit.cshtml
@@ -1,5 +1,4 @@
-﻿@using Alicargo.MvcHelpers
-@using Alicargo.MvcHelpers.Extensions
+﻿@using Alicargo.MvcHelpers.Extensions
 @model Alicargo.ViewModels.AirWaybill.AwbSenderModel
 
-@Html.EditPage("", Url.Action(MVC.SenderAwb.Edit()), Resources.Pages.Save)
+@Html.EditPage(Url.Action(MVC.SenderAwb.Edit()), Resources.Pages.Save)
