--- a/Alicargo/Views/Transit/Edit.cshtml
+++ b/Alicargo/Views/Transit/Edit.cshtml
@@ -1,5 +1,4 @@
-﻿@using Alicargo.MvcHelpers
-@using Alicargo.MvcHelpers.Extensions
+﻿@using Alicargo.MvcHelpers.Extensions
 @model TransitEditModel
 
 <ul class="nav nav-tabs" id="transit-tabs">
@@ -9,7 +8,7 @@
 
 <div class="tab-content">
 	<div class="tab-pane active" id="transit-data">
-		@Html.EditPage("", Url.Action(MVC.Transit.Edit()), Resources.Pages.Save)
+		@Html.EditPage(Url.Action(MVC.Transit.Edit()), Resources.Pages.Save)
 	</div>
 	<div class="tab-pane" id="application-data">
 		@Html.Action(MVC.Application.Details((long)ViewBag.ApplicationId))
