--- a/Alicargo/Views/Client/Create.cshtml
+++ b/Alicargo/Views/Client/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
 @model ClientModel
 
-@Html.EditPage(Resources.Pages.ClientAdd, Url.Action(MVC.Client.Create()), Resources.Pages.Add)
+<h1>@Resources.Pages.ClientAdd</h1>
+@Html.EditPage(Url.Action(MVC.Client.Create()), Resources.Pages.Add)
