--- a/Alicargo/Views/Application/Create.cshtml
+++ b/Alicargo/Views/Application/Create.cshtml
@@ -4,6 +4,6 @@
 
 <h1>
 	@Pages.ApplicationAdd
-	<span class="pull-right">@Entities.Nic: @Html.ViewBag.ClientNic</span>
+	<span>@Entities.Nic: @Html.ViewBag.ClientNic</span>
 </h1>
 @Html.EditPage(Url.Action(MVC.Application.Create()), Pages.ApplicationAdd)
