--- a/Alicargo/Views/Application/Edit.cshtml
+++ b/Alicargo/Views/Application/Edit.cshtml
@@ -4,6 +4,6 @@
 
 <h1>
 	@Pages.ApplicationEdit
-	<span class="pull-right">@Entities.Nic: @Html.ViewBag.ClientNic</span>
+	<span>@Entities.Nic: @Html.ViewBag.ClientNic</span>
 </h1>
 @Html.EditPage(Url.Action(MVC.Application.Edit()), Pages.Update)
