--- a/Alicargo/Views/Sender/ApplicationCreate.cshtml
+++ b/Alicargo/Views/Sender/ApplicationCreate.cshtml
@@ -4,6 +4,6 @@
 
 <h1>
 	@Pages.ApplicationAdd
-	<span class="pull-right">@Entities.Nic: @ViewBag.Nic</span>
+	<span>@Entities.Nic: @ViewBag.Nic</span>
 </h1>
 @Html.EditPage(Url.Action(MVC.Sender.ApplicationCreate()), Pages.Save)
